; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble.c_BTM_BleSetConnScanParams.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_ble.c_BTM_BleSetConnScanParams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i64, i64, i64 }

@btm_cb = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@FALSE = common dso_local global i64 0, align 8
@BTM_BLE_SCAN_INT_MIN = common dso_local global i32 0, align 4
@BTM_BLE_SCAN_INT_MAX = common dso_local global i32 0, align 4
@BTM_BLE_SCAN_WIN_MIN = common dso_local global i32 0, align 4
@BTM_BLE_SCAN_WIN_MAX = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8
@BLE_BG_CONN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [35 x i8] c"Illegal Connection Scan Parameters\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BTM_BleSetConnScanParams(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  store %struct.TYPE_3__* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @btm_cb, i32 0, i32 0), %struct.TYPE_3__** %5, align 8
  %7 = load i64, i64* @FALSE, align 8
  store i64 %7, i64* %6, align 8
  %8 = load i64, i64* %3, align 8
  %9 = load i32, i32* @BTM_BLE_SCAN_INT_MIN, align 4
  %10 = load i32, i32* @BTM_BLE_SCAN_INT_MAX, align 4
  %11 = call i64 @BTM_BLE_ISVALID_PARAM(i64 %8, i32 %9, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %53

13:                                               ; preds = %2
  %14 = load i64, i64* %4, align 8
  %15 = load i32, i32* @BTM_BLE_SCAN_WIN_MIN, align 4
  %16 = load i32, i32* @BTM_BLE_SCAN_WIN_MAX, align 4
  %17 = call i64 @BTM_BLE_ISVALID_PARAM(i64 %14, i32 %15, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %53

19:                                               ; preds = %13
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* %3, align 8
  %24 = icmp ne i64 %22, %23
  br i1 %24, label %25, label %30

25:                                               ; preds = %19
  %26 = load i64, i64* %3, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  store i64 %26, i64* %28, align 8
  %29 = load i64, i64* @TRUE, align 8
  store i64 %29, i64* %6, align 8
  br label %30

30:                                               ; preds = %25, %19
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 1
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* %4, align 8
  %35 = icmp ne i64 %33, %34
  br i1 %35, label %36, label %41

36:                                               ; preds = %30
  %37 = load i64, i64* %4, align 8
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  store i64 %37, i64* %39, align 8
  %40 = load i64, i64* @TRUE, align 8
  store i64 %40, i64* %6, align 8
  br label %41

41:                                               ; preds = %36, %30
  %42 = load i64, i64* %6, align 8
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %52

44:                                               ; preds = %41
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 2
  %47 = load i64, i64* %46, align 8
  %48 = load i64, i64* @BLE_BG_CONN, align 8
  %49 = icmp eq i64 %47, %48
  br i1 %49, label %50, label %52

50:                                               ; preds = %44
  %51 = call i32 (...) @btm_ble_suspend_bg_conn()
  br label %52

52:                                               ; preds = %50, %44, %41
  br label %55

53:                                               ; preds = %13, %2
  %54 = call i32 @BTM_TRACE_ERROR(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  br label %55

55:                                               ; preds = %53, %52
  ret void
}

declare dso_local i64 @BTM_BLE_ISVALID_PARAM(i64, i32, i32) #1

declare dso_local i32 @btm_ble_suspend_bg_conn(...) #1

declare dso_local i32 @BTM_TRACE_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
